--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@material-ui/core": "^4.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
