--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
