--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.13.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-pdf": "0.0.14"
